# cookiecutter-pypackage-minimodern

./: CHANGELOG.md  CHANGLEOG.md  LICENSE.md  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: LICENSE.md  README.md  __init__.py  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  publish.yml
