[metadata]

name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
url = {{ cookiecutter.package_url }}
license = MIT

author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}

description = {{ cookiecutter.package_description }}
long_description = file: README.md
long_description_content_type = text/markdown

classifiers=
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = {{ cookiecutter.package_name }}
python_requires = >=3.8
install_requires =

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True